force-app/main/default/objects/InvolvedPartner__c/InvolvedPartner__c.object-meta.xml
<CustomObject>
    <description>Related object to Partnerships. The object contact related accounts to a specific Partnership.</description>
    <label>Betrokken Partner</label>
    <nameField>
        <displayFormat>IPN-{0000000}</displayFormat>
        <label>Involved Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Betrokken Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>