force-app/main/default/objects/InvolvedPartner__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What account is involved in this partnership?</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Involved Partners</relationshipLabel>
    <relationshipName>Involved_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>