force-app/main/default/objects/InvolvedPartner__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>When did the account leave this Partnership?</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>