force-app/main/default/objects/InvolvedPartner__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this account still active within the Partnership?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>