force-app/main/default/objects/InvolvedPartner__c/fields/IsPrimaryAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this account leading the partnership?</description>
    <label>Primary Account</label>
    <type>Checkbox</type>
</CustomField>