force-app/main/default/objects/InvolvedPartner__c/fields/PartnershipActiveForm__c.field-meta.xml
<CustomField>
    <fullName>PartnershipActiveForm__c</fullName>
    <description>Displays if the Partnerships is still active.</description>
    <formula>PartnershipRef__r.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Active</label>
    <type>Checkbox</type>
</CustomField>