force-app/main/default/objects/InvolvedPartner__c/fields/PartnershipRef__c.field-meta.xml
<CustomField>
    <fullName>PartnershipRef__c</fullName>
    <description>What Partnership is related to this account.</description>
    <label>Partnership</label>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Involved Partners</relationshipLabel>
    <relationshipName>Involved_Partners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>