force-app/main/default/objects/InvolvedPartner__c/fields/PrimaryContactRef__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is the primary contact of this organization related to this Partnership?</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Involved Partners</relationshipLabel>
    <relationshipName>Involved_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>