force-app/main/default/objects/InvolvedPartner__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>When did the account enter this Partnership?</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>