force-app/main/default/objects/InvolvedPartner__c/fields/TypeOfPartnershipForm__c.field-meta.xml
<CustomField>
    <fullName>TypeOfPartnershipForm__c</fullName>
    <description>Formula field that shows the type of partnership from the related Partnership</description>
    <formula>TEXT(PartnershipRef__r.TypeOfPartnershipPick__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Of Partnership</label>
    <type>Text</type>
</CustomField>