force-app/main/default/objects/InvolvedPartner__c/validationRules/INP_VR02_InactiveWithNoEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>INP_VR02_InactiveWithNoEndDate</fullName>
    <active>true</active>
    <description>Inactive involved partners must have an end date specified.</description>
    <errorConditionFormula>AND( IsActive__c = false,
ISBLANK( EndDate__c )
)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>Inactive involved partners must have an end date specified. [VR02]</errorMessage>
</ValidationRule>