force-app/main/default/objects/InvolvedPartner__c/validationRules/INP_VR03_PrimairAccountCannotBeInactive.validationRule-meta.xml
<ValidationRule>
    <fullName>INP_VR03_PrimairAccountCannotBeInactive</fullName>
    <active>true</active>
    <description>The primary account cannot be inactive while the partnership is still active.</description>
    <errorConditionFormula>AND( IsActive__c = false, 
     PartnershipRef__r.IsActive__c = true, 
     IsPrimaryAccount__c = true
)</errorConditionFormula>
    <errorDisplayField>IsPrimaryAccount__c</errorDisplayField>
    <errorMessage>The primary account cannot be inactive while the partnership is still active. [VR03]</errorMessage>
</ValidationRule>